# kensa

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.sandbox  README.md  SECURITY.md  cliff.toml  pyproject.toml  skills
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml
docs/: .gitignore  README.md  changelog.mdx  checks.mdx  ci.mdx  cli.mdx  concepts.mdx  docs.json  examples.mdx  getting-started.mdx  introduction.mdx  judge.mdx  mcp-server.mdx  mcp.mdx  quickstart.mdx  reference.mdx  scenarios.mdx  skills.mdx  style.css  tracing.mdx  workflows.mdx
examples/code-reviewer/: README.md  agent.py
examples/customer-support/: README.md  agent.py
examples/incident-triage/: README.md  agent.py
examples/openai-agents-sdk/: .gitignore  README.md  run_agent.py  setup.sh
examples/sdr-qualifier/: README.md  agent.py
examples/sql-analyst/: README.md  agent.py
scripts/: release-prep.sh  release-tag.sh  release.sh
skills/: evals-directive.md
skills/audit-evals/: SKILL.md
skills/audit-evals/evals/: evals.json
skills/audit-evals/scripts/: check_instrumentation.py
skills/diagnose-errors/: SKILL.md
skills/diagnose-errors/evals/: evals.json
skills/generate-judges/: SKILL.md
skills/generate-judges/evals/: evals.json
skills/generate-scenarios/: SKILL.md
skills/generate-scenarios/evals/: evals.json
skills/generate-scenarios/references/: scenario-schema.md
skills/validate-judge/: SKILL.md
skills/validate-judge/evals/: evals.json
skills/validate-judge/scripts/: validate_judge.py
src/kensa/: __init__.py  _mcp_launcher.py  aggregate.py  analyzer.py  capture.py  checks.py  cli.py  doctor.py  exporter.py  generate.py  judge.py  llm.py  mcp_server.py  models.py  paths.py  pricing.py  report.py  runner.py  scaffold.py  skills_install.py  styles.py  trace_semantics.py  trajectory.py  translate.py  utils.py
src/kensa/skills/: evals-directive.md
tests/: conftest.py  test_aggregate.py  test_analyzer.py  test_capture.py  test_checks.py  test_cli.py  test_doctor.py  test_exporter.py  test_generate.py  test_integration.py  test_integration_e2e.py  test_judge.py  test_llm.py  test_mcp_launcher.py  test_mcp_server.py  test_models.py  test_packaging.py  test_paths.py  test_report.py  test_runner.py  test_skills_install.py  test_trace_semantics.py  test_trajectory.py  test_translate.py  test_utils.py
tests/fixtures/: capture_agent.py
website/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
website/app/: globals.css  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
website/app/docs/: layout.tsx
website/components/: CopyButton.tsx  CopyPageButton.tsx  DocsSidebar.tsx  DocsToc.tsx  InstallTabs.tsx  LandingPage.tsx  LandingPageDemo.tsx  LandingPageNav.tsx
website/content/docs/: changelog.mdx  checks.mdx  ci.mdx  cli.mdx  concepts.mdx  examples.mdx  index.mdx  judge.mdx  mcp.mdx  meta.json  quickstart.mdx  scenarios.mdx  skills.mdx  (+1 more)
website/public/: llms.txt
(+24 files in other folders)
